[package]
name = "geocode-pincode"
version = "0.1.0"
edition = "2021"

[dependencies]
calamine = "0.20"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["full"] }
rust_xlsxwriter = "0.76.0"
xlsxwriter = "0.6.0"